# EnterTheGungeonClone

./: .gitignore  CMakeLists.txt  main.cpp  readme.md  vcpkg.json
Animation/: Animation.cpp  AnimationManager.h
Characters/: Hero.h
Characters/Components/: InputComponent.cpp  MoveComponent.h
Managers/: DebugTexts.h  GameManager.cpp  GameManager.h  Globals.cpp  Globals.h  Misc.cpp  SpriteBatch.h
UI/: UserInterface.cpp
docs/: Animation.md  CreateGameObject.md  GameObject.md  GameState.md  ProjectStructure.md  Reflection.md  RenderingGuideline.md  TypeId.md
src/Animation/: Animation.cpp  Animation.h  AnimationManager.h
src/Characters/: Hero.cpp  Hero.h
src/Characters/Components/: AnimationComponent.cpp  AnimationComponent.h  HeroAnimComp.cpp  HeroAnimComp.h  HeroMoveComp.cpp  HeroMoveComp.h  InputComponent.cpp  InputComponent.h  MoveComponent.cpp  MoveComponent.h
src/Characters/Hand/: Hand.cpp  Hand.h
src/Core/: ComponentBase.h  Factory.h  GameClass.cpp  GameClass.h  GameObject.cpp  GameObject.h  GameObjectBase.cpp  GameObjectBase.h  TypeID.h
src/Core/Components/: ArrowComp.h  BaseAnimComp.cpp  BaseAnimComp.h  BaseHealthComp.cpp  BaseHealthComp.h  BaseMoveComp.cpp  BaseMoveComp.h  CollisionComponent.cpp  CollisionComponent.h  HealthComp.cpp  HealthComp.h  MoveComp.cpp  MoveComp.h  TimerComponent.cpp  TimerComponent.h
src/Core/Events/: EventDelegate.h
src/Core/Scene/: Scene.cpp  Scene.h
src/Enemy/: EnemyBase.cpp  EnemyBase.h
src/Enemy/BulletMan/: BulletMan.cpp  BulletMan.h
src/Enemy/BulletMan/Components/: BulletManAnimComp.cpp  BulletManAnimComp.h  BulletManMoveComp.cpp  BulletManMoveComp.h
src/Enemy/Components/: EnemyMoveCompBase.cpp  EnemyMoveCompBase.h
src/Engine/: Engine.cpp  Engine.h  Reflection.h
src/Engine/UI/: EngineUI.cpp  EngineUI.h  ModalManager.h  UIUtils.cpp  UIUtils.h
src/Guns/AK-47/: AK47.cpp  AK47.h
src/Guns/Base/: GunAnimComp.cpp  GunAnimComp.h  GunBase.cpp  GunBase.h  GunModifiers.h
src/Guns/Magnum/: Magnum.cpp  Magnum.h
src/Guns/RogueSpecial/: RogueSpecial.cpp  RogueSpecial.h
src/Guns/SawedOff/: SawedOff.cpp  SawedOff.h
src/Guns/VFX/: MuzzleFlash.cpp  MuzzleFlash.h  ReloadText.h
src/Items/: ActiveItem.cpp  ActiveItem.h  PassiveItem.cpp  PassiveItem.h
src/Items/Active/: ActiveItemBase.cpp  ActiveItemBase.h  DoubleShoot.cpp  DoubleShoot.h
src/Items/Passive/: PassiveItemBase.h  PlatinumBullets.cpp  PlatinumBullets.h
src/Managers/: DebugTexts.h  GameManager.cpp  GameManager.h  GameState.h  Globals.cpp  Globals.h  InputManager.cpp  InputManager.h  Misc.h  SpriteBatch.cpp  SpriteBatch.h  StateEnums.h  TypeRegistry.h
src/Managers/Enum/: StateEnums.h  StateFlags.h
src/Modifiers/: ModifierManager.h
src/Modifiers/Gun/: MultiShotModifier.h
src/Projectile/: ProjectileBase.cpp  ProjectileBase.h
src/UI/: UserInterface.cpp  UserInterface.h
src/UI/UIObjects/: AmmoBarUI.cpp  AmmoBarUI.h  AmmoCounter.h  AmmoIndicatorsUI.cpp  AmmoIndicatorsUI.h  FrameBar.cpp  FrameBar.h  FrameLeftProgressBar.cpp  FrameLeftProgressBar.h  ReloadSlider.cpp  ReloadSlider.h  ReloadText.h
src/Utils/: DirectionUtils.cpp  DirectionUtils.h  Math.h  StrManipulateUtil.h  TextureUtils.h
src/Utils/Interface/: IAnimationComponent.h  IGunModifier.h
